Switch to line plots

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -26,16 +26,16 @@ median(plotdata)
 ## What is the average daily activity pattern?
 ```{r}
 plotdata <- aggregate(steps ~ interval, activity, mean, na.rm = TRUE)
-mp <- barplot(plotdata$steps, names=plotdata$interval, 
+plot(plotdata$interval, plotdata$steps, type="l",
+        main="Average Daily Activity",
         xlab="Time Interval", ylab="Average Steps")
-mostSteps <- which.max(plotdata$steps)
-abline(v = mp[mostSteps], col="yellow", lty=2)
-title("Average Daily Activity")
+mostSteps <- plotdata$interval[which.max(plotdata$steps)]
+abline(v = mostSteps, col="green", lty=1)
 ```
 
 ### The most activity is at 8:35 in the morning
 ```{r}
-plotdata$interval[mostSteps]
+mostSteps
 ```
 ## Imputing missing values
 ### Replace missing values with the average number of steps calculated for the corresponding time interval.
@@ -57,15 +57,18 @@ median(plotdata)
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ```{r}
-averageSteps$day <- ifelse(grepl("^S", weekdays(averageSteps$date)), "weekend", "weekday")
+averageSteps$day <- ifelse(grepl("^S", weekdays(averageSteps$date)),
+                           "weekend", "weekday")
+
 averageSteps$day <- factor(averageSteps$day)
+
 plotdata <- aggregate(steps.x ~ interval + day, averageSteps, mean)
 
 library(ggplot2)
 p <- ggplot(data=plotdata, aes(x=interval, y=steps.x))
 p <- p + ggtitle("Average Daily Activity")
 p <- p + labs(x= "Time Interval", y = "Average Steps")
-p <- p + geom_bar(stat="identity")
+p <- p + geom_line()
 p <- p + facet_grid(day ~ .)
 p
 ```
@@ -73,18 +76,20 @@ p
 ### Weekdays have a peak of activity at 8:35, but less total activity throughout the day.
 ```{r}
 weekday <- subset(plotdata, day == "weekday")
-barplot(weekday$steps.x, names=weekday$interval, xlab="Time Interval", ylab="Average Steps")
+plot(weekday$interval, weekday$steps.x, type="l",
+     main="Average Daily Activity on Weekdays", 
+     xlab="Time Interval", ylab="Average Steps")
 abline(h=mean(weekday$steps.x), col="red", lty=2)
 abline(h=median(weekday$steps.x), col="blue", lty=3)
-legend("topleft", c("Mean", "Median"), col=c("red", "blue"), lty =c(2,3))
-mostSteps <- which.max(weekday$steps.x)
-abline(v = mp[mostSteps], col="yellow", lty=2)
-title("Average Daily Activity on Weekdays")
+legend("topleft", c("Mean", "Median", "Most Steps"), 
+       col=c("red", "blue", "green"), lty =c(2,3, 1))
+mostSteps = weekday$interval[which.max(weekday$steps.x)]
+abline(v = mostSteps, col="green", lty=1)
 ```
 
 ### The most activity is at 8:35 in the morning
 ```{r}
-weekday$interval[mostSteps]
+mostSteps
 mean(weekday$steps.x)
 median(weekday$steps.x)
 sum(weekday$steps.x)
@@ -93,20 +98,41 @@ sum(weekday$steps.x)
 ### Weekends have more activity spread throughout the day.
 ```{r}
 weekend <- subset(plotdata, day == "weekend")
-barplot(weekend$steps.x, names=weekend$interval, xlab="Time Interval", ylab="Average Steps")
+plot(weekend$interval, weekend$steps.x, type = "l",
+        main="Average Daily Activity on Weekends", 
+        xlab="Time Interval", ylab="Average Steps")
 abline(h=mean(weekend$steps.x), col="red", lty=2)
 abline(h=median(weekend$steps.x), col="blue", lty=3)
-legend("topleft", c("Mean", "Median"), col=c("red", "blue"), lty =c(2,3))
-mostSteps <- which.max(weekend$steps.x)
-abline(v = mp[mostSteps], col="yellow", lty=2)
-title("Average Daily Activity on Weekends")
-
+legend("topleft", c("Mean", "Median", "Most Steps"), 
+       col=c("red", "blue", "green"), lty =c(2,3, 1))
+mostSteps = weekend$interval[which.max(weekend$steps.x)]
+abline(v = mostSteps, col="green", lty=1)
 ```
 
 ### The most activity is at 9:15 in the morning
 ```{r}
-weekend$interval[mostSteps]
+mostSteps
 mean(weekend$steps.x)
 median(weekend$steps.x)
 sum(weekend$steps.x)
+```
+
+## It's interesting to compare activity throughout the week.
+```{r}
+averageSteps$day <- weekdays(averageSteps$dat)
+averageSteps$day <- factor(averageSteps$day, ordered=TRUE,
+   levels=c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", 
+            "Saturday", "Sunday"))
+
+plotdata <- aggregate(steps.x ~ interval + day, averageSteps, mean)
+
+library(ggplot2)
+p <- ggplot(data=plotdata, aes(x=interval, y=steps.x))
+p <- p + ggtitle("Average Daily Activity")
+p <- p + labs(x= "Time Interval", y = "Average Steps")
+p <- p + geom_line()
+p <- p + facet_grid(day ~ .)
+p
+
+aggregate(steps.x ~ day, plotdata, sum)
 ```
